# fetion

./: AUTHORS  CMakeLists.txt  COPYING  ChangeLog  INSTALL  License.OpenSSL  README.md  fetion.1
lib/: fetion_buddylist.c  fetion_buddylist.h  fetion_config.c  fetion_config.h  fetion_connection.c  fetion_connection.h  fetion_contact.c  fetion_contact.h  fetion_conversation.c  fetion_conversation.h  fetion_debug.c  fetion_debug.h  fetion_directsms.c  fetion_directsms.h  fetion_group.c  fetion_group.h  fetion_history.c  fetion_history.h  fetion_include.h  fetion_list.c  fetion_list.h  fetion_login.c  fetion_login.h  fetion_message.c  fetion_message.h  fetion_share.c  fetion_share.h  fetion_sip.c  fetion_sip.h  fetion_types.h  fetion_user.c  fetion_user.h  openfetion.h
src/: cliofetion.c~  fetion.c  fetion.c~
